@@ -1,2 +1,4 @@
 # gene-loading-pipeline
-Loads gene models from NCBI
+
+Loads gene models from NCBI (genes and transcripts) for all species in RGD
+ (rat, mouse, human, chinchilla, bonobo, dog, pig, squirrel, green monkey, naked mole rat, ...)
